textfield plugins installation

--- a/tests/app/viewer.html
+++ b/tests/app/viewer.html
@@ -1,7 +1,7 @@
-<m-template>
+<div>
     <div slot="header">
         <m-link :underline="false" :unvisited="true" icon-name="left-arrow">Menu</m-link>
         <h1>{{$route.meta}}</h1>
     </div>
     <m-dynamic-template :template="tag"></m-dynamic-template>
-</m-template>
+</div>
