simplify sandbox application

--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -1,5 +1,5 @@
 <div>
-    <h1 slot="header">Menu</h1>
+    <h1>modul sandbox</h1>
     <h2>
         <m-link url="attributes">Attributes list</m-link>
     </h2>
