--- a/tests/app/viewer.html
+++ b/tests/app/viewer.html
@@ -1,5 +1,5 @@
 <div>
-    <div slot="header">
+    <div>
         <m-link :underline="false" :unvisited="true" icon-name="left-arrow">Menu</m-link>
         <h1>{{$route.meta}}</h1>
     </div>
