--- a/tests/app/viewer.html
+++ b/tests/app/viewer.html
@@ -1,7 +1,10 @@
-<div>
-    <div>
-        <m-link :underline="false" :unvisited="true" icon-name="left-arrow">Menu</m-link>
-        <h1>{{$route.meta}}</h1>
-    </div>
-    <m-dynamic-template :template="tag"></m-dynamic-template>
-</div>
+<m-flex-template :menuOpen="menuOpen">
+    <m-template>
+        <div slot="header">
+            <m-link :underline="false" :unvisited="true" icon-name="left-arrow">Menu</m-link>
+            <h1>{{$route.meta}}</h1>
+        </div>
+        <m-dynamic-template :template="tag"></m-dynamic-template>
+    </m-template>
+    <div slot="footer">Footer</div>
+</m-flex-template>
