--- a/tests/app/viewer.html
+++ b/tests/app/viewer.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <m-link :underline="false" :unvisited="true" icon-name="left-arrow">Menu</m-link>
+        <router-link to="/">Menu</router-link>
         <h1>{{$route.meta}}</h1>
     </div>
     <m-dynamic-template :template="tag"></m-dynamic-template>
