--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -1,16 +1,18 @@
 <div>
     <h2>
-        <m-link url="attributes">Attributes list</m-link>
+        <router-link to="attributes">Attributes list</router-link>
     </h2>
     <h2>
-        <m-link url="media-queries">Media Queries</m-link>
+        <router-link to="media-queries">Media Queries</router-link>
     </h2>
+
+    <m-datepicker><!-- Test case --></m-datepicker>
 
     <h2>Components list</h2>
     <nav class="m-u--margin-top">
         <ul class="m-u--bullet-list">
             <li v-for="route in routes">
-                <m-link :url="route">{{route}}</m-link>
+                <router-link :to="route">{{route}}</router-link>
             </li>
         </ul>
     </nav>
