Added sandbox for draggable directive (as provided by jipigi)

--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -5,16 +5,16 @@
             <nav class="m-u--margin-top">
                 <ul class="m-navigation__submenu">
                     <li>
-                        <m-link mode="Link" href="#component">Components</m-link>
+                        <m-link mode="link" href="#component">Components</m-link>
                     </li>
                     <li>
-                        <m-link mode="Link" href="#directives">Directives</m-link>
+                        <m-link mode="link" href="#directives">Directives</m-link>
                     </li>
                     <li>
-                        <m-link mode="Link" href="#filters">Filters</m-link>
+                        <m-link mode="link" href="#filters">Filters</m-link>
                     </li>
                     <li>
-                        <m-link mode="Link" href="#mixins">Mixins</m-link>
+                        <m-link mode="link" href="#mixins">Mixins</m-link>
                     </li>
                 </ul>
             </nav>
