modifications after code review

--- a/tests/app/app-frame/app-frame.html
+++ b/tests/app/app-frame/app-frame.html
@@ -1,10 +1,12 @@
 <div>
-    <header class="mtest-header m-u--box-shadow--s">
-        <h1 class="m-u--h4 m-u--no-margin-top">MODUL <i class="m-u--font-size--s m-u--no-margin-top"><m-link url="/" >Components</m-link> - <m-link
-            mode="link" target="_blank" url="https://ulaval.github.io/modul/">Documentation</m-link>
-            </i> </h1>
+    <header class="m-test__header m-u--box-shadow--s">
+        <h1 class="m-u--h4 m-u--no-margin-top"><span><span class="m-test__title">MODUL </span> - Components</span><span><i
+                    class="m-u--font-size--s m-u--no-margin-top">
+                    <m-link mode="link" target="_blank" url="https://wiki.dti.ulaval.ca/x/1RQpBQ">Wiki</m-link> - <m-link mode="link" target="_blank" url="https://ulaval.github.io/modul/">Website</m-link>
+                </i></span>
+        </h1>
     </header>
-    <main class="mtest-content">
-            <router-view></router-view>
+    <main class="m-test__content">
+        <router-view></router-view>
     </main>
 </div>
