--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -1,7 +1,7 @@
 <m-flex-template padding-top="52px">
     <m-template>
         <div slot="header">
-            <h1>Menu</h1>
+            <h1>Sandboxes</h1>
             <nav class="m-u--margin-top">
                 <ul class="m-navigation__submenu">
                     <li>
