fix after code review

--- a/tests/app/app-frame/app-frame.html
+++ b/tests/app/app-frame/app-frame.html
@@ -1,6 +1,6 @@
 <div>
     <header class="m-test__header m-u--box-shadow--s">
-        <h1 class="m-u--h4 m-u--no-margin-top"><span><span class="m-test__title">MODUL </span> - Components</span><span><i
+        <h1 class="m-u--h4 m-u--no-margin-top"><span>MOD<span class="m-test__title">UL</span> - Components</span><span><i
                     class="m-u--font-size--s m-u--no-margin-top">
                     <m-link mode="link" target="_blank" url="https://wiki.dti.ulaval.ca/x/1RQpBQ">Wiki</m-link> - <m-link mode="link" target="_blank" url="https://ulaval.github.io/modul/">Website</m-link>
                 </i></span>
