358_Creer_sandbox_pour_directive_filter_et_mixins: Auto stash before rebase of "origin/MODUL-358_Creer_sandbox_pour_directive_filter_et_mixins"
Revue

--- a/tests/app/app-frame/app-frame.html
+++ b/tests/app/app-frame/app-frame.html
@@ -1,9 +1,10 @@
 <div>
     <header class="m-test__header m-u--box-shadow--s">
-        <h1 class="m-u--h4 m-u--no-margin-top"><span>MOD<span class="m-test__title">UL</span> - Components</span><span><i
-                    class="m-u--font-size--s m-u--no-margin-top">
-                    <m-link mode="link" target="_blank" url="https://wiki.dti.ulaval.ca/x/1RQpBQ">Wiki</m-link> - <m-link mode="link" target="_blank" url="https://ulaval.github.io/modul/">Website</m-link>
-                </i></span>
+        <h1 class="m-u--h4 m-u--no-margin-top">
+            <span>MOD<span class="m-test__title">UL</span> - Components</span>
+            <span class="m-u--font-size--s m-u--no-margin-top">
+                <m-link mode="link" target="_blank" url="https://ulaval.github.io/modul/">Documentation</m-link>
+            </span>
         </h1>
     </header>
     <main class="m-test__content">
