--- a/tests/app/index.html
+++ b/tests/app/index.html
@@ -8,7 +8,7 @@
 
 <body class="m-u--app-body">
     <div class="mtest-content">
-        <div id="vue">... Waiting</div>
+        <div id="vue">Waiting...</div>
     </div>
 </body>
 
