--- a/src/directives/scroll-to/scroll-to.sandbox.html
+++ b/src/directives/scroll-to/scroll-to.sandbox.html
@@ -7,18 +7,18 @@
     <div>
         Offset: <input type="text" v-model="offset" />
         Speed: <select v-model="speed">
-                    <option value="slow">Slow</option>
-                    <option value="slower" >Slower</option>
-                    <option value="regular" >Regular</option>
-                    <option value="fast"  >Fast</option>
-                </select>
+            <option value="slow">Slow</option>
+            <option value="slower">Slower</option>
+            <option value="regular">Regular</option>
+            <option value="fast">Fast</option>
+        </select>
         Easing: <select v-model="easing">
-                    <option value="linear">Linear</option>
-                    <option value="easeInQuad">EaseInQuad</option>
-                    <option value="easeOutQuad">EaseOutQuad</option>
-                    <option value="easeInCubic">EaseInCubic</option>
-                    <option value="easeOutCubic">EaseOutCubic</option>
-                </select>
+            <option value="linear">Linear</option>
+            <option value="easeInQuad">EaseInQuad</option>
+            <option value="easeOutQuad">EaseOutQuad</option>
+            <option value="easeInCubic">EaseInCubic</option>
+            <option value="easeOutCubic">EaseOutCubic</option>
+        </select>
     </div>
 
     <p class="m-u--margin-bottom">
@@ -47,5 +47,88 @@
     <div ref="red" style="height: 1000px; background-color: red;"> <a href="#" @click="scrollToTop()">Scroll to top</a>
     </div>
     <div ref="green" style="height: 1000px; background-color: green;"> <a href="#" @click="scrollToTop()">Scroll to top</a>
+    </div>
+
+    <!-- Test in container -->
+    <h3>Test Scroll-to in container</h3>
+    <p class="m-u--margin-bottom">Use the scroll-to service to scroll down in a container</p>
+    <div ref="orange" style="height: 200px; background-color: orange; overflow-y: scroll;">
+        <a href="#" @click="scrollInOrangeUsingService()">Scroll to bottom container</a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repellat libero rem provident blanditiis
+            fugiat asperiores iusto labore delectus quam alias nihil deleniti, at quisquam, aliquid ipsum reprehenderit
+            similique ad.</p>
+
     </div>
 </div>
