scroll to using y postion

--- a/src/directives/scroll-to/scroll-to.sandbox.html
+++ b/src/directives/scroll-to/scroll-to.sandbox.html
@@ -58,6 +58,7 @@
             <a href="#" @click.prevent="scrollInOrangeUsingService()">Scroll inside to green</a>
             <a href="#" @click.prevent="scrollInToTopOrangeUsingService()">Scroll inside to top</a>
             <a href="#" @click.prevent="scrollInToBottomOrangeUsingService()">Scroll inside to bottom</a>
+            <a href="#" @click.prevent="scrollInToDown200InOrangeUsingService()">Scroll inside to y=200</a>
         </div>
     </p>
     <div ref="orange" style="height: 200px; background-color: orange; overflow-y: scroll;">
