renaming speed to duration

--- a/src/directives/scroll-to/scroll-to.sandbox.html
+++ b/src/directives/scroll-to/scroll-to.sandbox.html
@@ -6,7 +6,7 @@
     </p>
     <div>
         Offset: <input type="text" v-model="offset" />
-        Speed: <select v-model="speed">
+        Duration: <select v-model="speed">
             <option value="slow">Slow</option>
             <option value="slower">Slower</option>
             <option value="regular">Regular</option>
