--- a/src/filters/date-time/date-time.sandbox.html
+++ b/src/filters/date-time/date-time.sandbox.html
@@ -6,8 +6,8 @@
     <m-textfield v-model="minutes" label="minutes"></m-textfield>
 
     <h3>Long format</h3>
-    <p>{{ date | f-m-date-time }}</p>
+    <p v-html="formattedDateTimeLong"></p>
 
     <h3>Short format</h3>
-    <p>{{ date | f-m-date-time(true) }}</p>
+    <p v-html="formattedDateTimeShort"></p>
 </div>
