Modification after code review

--- a/src/directives/scroll-to/scroll-to.sandbox.html
+++ b/src/directives/scroll-to/scroll-to.sandbox.html
@@ -7,17 +7,9 @@
     <div>
         Offset: <input type="text" v-model="offset" />
         Duration: <select v-model="speed">
-            <option value="slow">Slow</option>
-            <option value="slower">Slower</option>
+            <option value="short">Short</option>
             <option value="regular">Regular</option>
-            <option value="fast">Fast</option>
-        </select>
-        Easing: <select v-model="easing">
-            <option value="linear">Linear</option>
-            <option value="easeInQuad">EaseInQuad</option>
-            <option value="easeOutQuad">EaseOutQuad</option>
-            <option value="easeInCubic">EaseInCubic</option>
-            <option value="easeOutCubic">EaseOutCubic</option>
+            <option value="long">Long</option>
         </select>
     </div>
 
