--- a/src/utils/scroll-to/scroll-to-service.sandbox.html
+++ b/src/utils/scroll-to/scroll-to-service.sandbox.html
@@ -135,10 +135,8 @@
         <m-button slot="trigger">Ouvrir</m-button>
         <h2 slot="header" style="margin:0;">Titre</h2>
 
-        <input type="text" class="m-u--margin-bottom">
-        <input type="text" class="m-u--margin-bottom">
-        <input type="text" class="m-u--margin-bottom">
-
+        <m-textfield class="m-u--margin-bottom" label="Prénom"></m-textfield>
+        <m-textfield class="m-u--margin-bottom" label="Nom"></m-textfield>
 
         <p style="margin:0;">Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor
             voluptate est nisi anim
@@ -165,7 +163,8 @@
             elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
             tempor in in nostrud reprehenderit minim culpa incididunt.</p>
         <p>
-            <textarea class="scroll-to-me-on-save" cols="30" rows="10">scroll to me on save!</textarea></p>
+            <m-message state="information" class="m-u--margin-bottom m-u--margin-top--l">Scroll to this comment on save!</m-message>
+            <m-textarea class="scroll-to-me-on-save" label="Comment" max-width="medium" value="Giving feedback is one of the most important parts of every manager’s job. Good employees need and want to know how they are doing well and those with blind spots in their performance need and want to know those blind spots and how they can improve."></m-textarea></p>
         <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi
             anim
             elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
