fix scroll to in Ios

--- a/src/utils/scroll-to/scroll-to-service.sandbox.html
+++ b/src/utils/scroll-to/scroll-to-service.sandbox.html
@@ -221,7 +221,7 @@
     </m-overlay>
     <p>
         <h3>Test Scroll-to top</h3>
-        <a ref="bottom" href="#" @click="scrollToTop()">Scroll to top</a>
+        <a ref="bottom" href="#" @click="scrollToTop()">Scroll to top!</a>
     </p>
 
 </div>
