--- a/tests/app/index.html
+++ b/tests/app/index.html
@@ -7,7 +7,7 @@
           content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.3, user-scalable=yes" />
 </head>
 
-<body class="m-u--app-body m-u--min-width">
+<body class="m-u--app-body">
     <div id="vue">Waiting...</div>
 </body>
 
