--- a/tests/app/viewer/viewer.html
+++ b/tests/app/viewer/viewer.html
@@ -1,6 +1,6 @@
 <m-template>
     <div slot="header">
-        <m-link :underline="false" :unvisited="true" icon-name="m-svg__chevron--left">Retour</m-link>
+        <m-back url="/"></m-back>
         <h1>{{$route.meta}}</h1>
     </div>
     <m-dynamic-template :template="tag"></m-dynamic-template>
